fixed margins on mobile

--- a/style.css
+++ b/style.css
@@ -53,4 +53,11 @@ h1 {
     h1 {
     font-size: 1.5em;
     }
+    
+    #map-canvas {
+    height: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 }
